# py_note_extract

./: .gitignore  LICENSE  pyproject.toml
src/py_note_extract/: guitar_pro.py  midi_extract.py  models.py
tests/integration/: test_guitar_pro.py
